# Xylem

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  README.md  lazy.lua
docs/: COMMAND-REFERENCE.md  COMMAND-RUST.md
docs/plans/: incremental-highlighting.md
examples/: php_install_test.rs
lua/xylem/: highlights.lua  init.lua  rpc.lua
plugin/: xylem.lua
queries/lua/: highlights.scm
src/: lib.rs  logger.rs  main.rs
src/editor/: buffer.rs  events.rs  handler.rs  messages.rs  mod.rs  rpc.rs  rpc_server.rs
src/features/: highlight.rs  indent.rs  mod.rs
src/parser/: diff.rs  edits.rs  incremental.rs  installer.rs  mod.rs  queries.rs  registry.rs
src/parser/queries/: engine.rs  loader.rs  mod.rs  types.rs
src/runtime/: cache.rs  list.rs  mod.rs  scheduler.rs  state.rs  sync.rs  workers.rs
tests/: concurrency_test.rs  highlight_test.rs  integration_test.rs
