[package]
name = "xylem"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.24"
tree-sitter-lua = "0.2"

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

ropey = "1"

parking_lot = "0.12"

anyhow = "1"

directories = "6.0"
duct = "0.13"
walkdir = "2"

# msgpack removed - use stdio JSON instead
lru = "0.8"
streaming-iterator = "0.1"